# warehouse

./: pyproject.toml
apps/inventory_management/: apps.py  models.py  serializers.py
apps/inventorymanagement/: apps.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/warehouse_management/: admin.py  apps.py  models.py  serializers.py  views.py
apps/warehouse_management/migrations/: 0001_initial.py
config/: settings.py
utils/: analytics.py
